Bug 628209 partial fix.  On trace, make the element getter for typed arrays of unsigned integers that are less than 32 bits get signed 32-bit ints, not unsigned 32-bit ints.  r=gal